<resources>
    <string name="app_name">FirstFaceMe</string>
    <string name="login_number">Log in using Phone Number</string>
    <string name="trouble_logging">Trouble Logging In?</string>
    <string name="mobile_number">mobile number</string>
    <string name="send_otp">SEND OTP</string>
    <string name="enter">Enter</string>
    <string name="your_otp">your OTP</string>
    <string name="submit">SUBMIT</string>
    <string name="resend">Resend</string>


    //home
    <string name="home">Home</string>
    <string name="message">Message</string>
    <string name="profile">Profile</string>
    <string name="online">Online</string>
    <string name="discover">Discover</string>
    <string name="messages">Messages</string>
    <string name="search_message">Search messages</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="register_profile">Register Profile</string>
    <string name="queue">Queue</string>
    <string name="bio">Bio</string>
    <string name="job">Job</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam..</string>


    //settings
    <string name="settings">Settings</string>
    <string name="phone_number">Phone Number</string>
    <string name="location">Location</string>
    <string name="max_distance">Maximum Distance</string>
    <string name="read_receipts">Read Receipts</string>
    <string name="go_premium">Go Premium</string>
    <string name="delete_account">Delete Account</string>
    <string name="logout">Logout</string>
    <string name="my_location">My Current Location</string>
    <string name="age">Age</string>

    //edit profile
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="interested_in">Interested In</string>
    <string name="gender">Gender</string>
    <string name="save">SAVE</string>
    <string name="type_here">Type here</string>
    <string name="review">Review</string>

    //go premium
    <string name="subscribe">SUBSCRIBE</string>
    <string name="payment">Payment</string>
    <string name="card_number">Card Number</string>
    <string name="expiration_date">Expiration Date</string>
    <string name="CVV">CVV</string>
    <string name="confirm_payment">CONFIRM PAYMENT</string>
    <string name="share">Share</string>

    //Error message

    <string name="err_msg_number">Please Enter Correct Phone Number.</string>
    <string name="err_first_name">Please Enter Your First Name.</string>
    <string name="err_last_name">Please Enter Your Last Name.</string>
    <string name="err_bio">Please Enter Your Bio.</string>
    <string name="err_job">Please Enter Your Job.</string>
    <string name="err_slect_gender">Please select Gender.</string>
    <string name="err_age">Please Enter Age</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="transgender">TransGender</string>
    <string name="offline">Offline</string>
    <string name="select_plan">Select Plan First</string>
    <string name="no_message">No Message  Found</string>
    <string name="decline">Decline</string>
    <string name="answere">Answer</string>
    <string name="permissions_needed">Permission Need</string>
    <string name="room_screen_select_device">Select Devices</string>
    <string name="deletee_account_Are_you">Are you sure you want to delete account?</string>
    <string name="are_ypu_sire_logout">Are you sure to Logout?</string>
    <string name="no_match">No Match Found</string>
    <string name="keep_swiping">Keep Swiping</string>
    <string name="start_video_cal">Start Video Call</string>


    //gender array
    <string-array name="Gender">
        <item>Select Gender</item>
        <item>Male</item>
        <item>Female</item>
        <item>TransGender</item>
    </string-array>

</resources>
