<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_120sdp"
        android:background="@drawable/boarder_bottom_round_pink"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:gravity="center"
            android:orientation="horizontal">

            <com.firstfaceme.firstface.controller.CustomViews.MyTextViewBold
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile"
                android:textColor="@color/white"
                android:textSize="@dimen/_32sdp" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:id="@+id/iv_settings"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:layout_marginRight="@dimen/_20sdp"
                android:src="@drawable/settings" />
        </RelativeLayout>

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_100sdp"
        android:layout_gravity="center"
        android:layout_marginTop="-60dp"
        android:elevation="10dp"
        app:cardCornerRadius="10dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/roundedImageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:scaleType="centerCrop"
           />
    </androidx.cardview.widget.CardView>

    <com.firstfaceme.firstface.controller.CustomViews.MyTextViewBold
        android:id="@+id/tvNameAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:gravity="center"
        tools:text="Sreed, 27"
        android:textColor="@color/black"
        android:textSize="@dimen/_20sdp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/ll_edit_profile"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:scaleType="centerCrop"
                android:src="@drawable/edit" />

            <com.firstfaceme.firstface.controller.CustomViews.MyTextViewMedium
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:gravity="center"
                android:text="@string/edit_profile"
                android:textColor="@color/black"
                android:textSize="@dimen/_10sdp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ll_queau"
            android:layout_marginLeft="@dimen/_20sdp"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:scaleType="centerCrop"
                android:src="@drawable/queue" />

            <com.firstfaceme.firstface.controller.CustomViews.MyTextViewMedium
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:gravity="center"
                android:text="@string/queue"
                android:textColor="@color/black"
                android:textSize="@dimen/_10sdp" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvQueCount"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:text="0"
            android:gravity="center"
            android:textColor="@color/white"
            android:background="@drawable/boarder_pink"
            android:layout_gravity="top"

android:layout_marginLeft="-10dp"   /> </LinearLayout>
    <com.firstfaceme.firstface.controller.CustomViews.MyTextViewBold
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/_10sdp"
    android:text="@string/bio"
    android:layout_marginLeft="@dimen/_20sdp"
    android:textColor="@color/black"
    android:textSize="@dimen/_16sdp" />
    <com.firstfaceme.firstface.controller.CustomViews.MyTextViewRegular
        android:id="@+id/tvBio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        tools:text="@string/lorem"
        android:layout_marginLeft="@dimen/_20sdp"
        android:textColor="@color/black"
        android:textSize="@dimen/_12sdp" />
    <com.firstfaceme.firstface.controller.CustomViews.MyTextViewBold
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/job"
        android:layout_marginLeft="@dimen/_20sdp"
        android:textColor="@color/black"
        android:textSize="@dimen/_16sdp" />
    <com.firstfaceme.firstface.controller.CustomViews.MyTextViewRegular
        android:id="@+id/tvJob"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        tools:text="Fashion Designer"
        android:layout_marginLeft="@dimen/_20sdp"
        android:textColor="@color/black"
        android:textSize="@dimen/_12sdp" />
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:background="@color/white"
        android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_70sdp"
                android:layout_height="match_parent">

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:id="@+id/rv_profile_pic"
                    android:layout_height="match_parent"/>
            </RelativeLayout>


    </RelativeLayout>

</LinearLayout>

    </ScrollView>


    <!--<ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"/>-->
</RelativeLayout>