<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_img"
    tools:context=".view.activity.MobileNumberActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:layout_height="match_parent">
        <com.firstfaceme.firstface.controller.CustomViews.MyTextViewBold
            android:layout_width="match_parent"
            android:text="@string/enter"
            android:textSize="@dimen/_32sdp"
            android:textColor="@color/colorPrimary"
            android:layout_height="wrap_content"/>
        <com.firstfaceme.firstface.controller.CustomViews.MyTextViewBold
            android:layout_width="match_parent"
            android:text="@string/mobile_number"
            android:textSize="@dimen/_32sdp"
            android:textColor="@color/colorPrimary"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_height="wrap_content">
            <com.rilixtech.widget.countrycodepicker.CountryCodePicker
                android:id="@+id/ccp"
                app:ccp_defaultNameCode="US"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <com.firstfaceme.firstface.controller.CustomViews.MyEditTextBold
                android:layout_width="match_parent"
                android:layout_marginLeft="@dimen/_10sdp"
               android:textColor="@color/black"
                android:id="@+id/et_number"
                android:inputType="phone"
                android:textSize="@dimen/_20sdp"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/_60sdp"
            android:id="@+id/ll_send_otp"
            android:background="@drawable/boarder_pink"
            android:layout_height="wrap_content">
            <com.firstfaceme.firstface.controller.CustomViews.MyTextViewBold
                android:layout_width="match_parent"
                android:text="@string/send_otp"
                android:gravity="center"
                android:textSize="@dimen/_14sdp"
                android:textColor="@color/white"
                android:padding="@dimen/_10sdp"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clLoader"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusable="true"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:indeterminate="true"
            android:indeterminateTintMode="src_atop"
            android:indeterminateTint="@color/colorAccent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>